<LinearLayout
    style="@style/content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/page_title"
        android:layout_width="fill_parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="@dimen/page_title_height"
            android:layout_height="fill_parent"
            android:background="@null"
            android:src="@drawable/white_back_btn"/>

        <TextView
            style="@style/page_title_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feed_back"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dip">

        <Button
            style="@style/reg_btn_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="3dip"
            android:text="@string/feed_back_label"
            android:textSize="@dimen/text_size_12"/>

        <EditText
            android:id="@+id/content"
            style="@style/normal_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feed_back_hint"
            android:minHeight="150dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dip">

        <Button
            android:id="@+id/send_info"
            style="@style/login_btn_style"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_height"
            android:text="@string/send_message"/>
    </LinearLayout>

</LinearLayout>