<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@color/white"
    android:id="@+id/radio_group">
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/home"
        android:drawableTop="@drawable/selector_main_home"
        style="@style/main_tabhost_style"
        android:text="@string/tab_mian"/>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/clazz"
        android:drawableTop="@drawable/selector_main_clazz"
        style="@style/main_tabhost_style"
        android:text="@string/tab_clazz"/>
    <ImageView
        android:id="@+id/show_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@color/green1"
        android:src="@drawable/ten"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/msg">
        <TextView
            android:id="@+id/msg_num"
            android:layout_marginTop="4dp"
            android:layout_marginRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/shape_msg_round"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="10"
            android:visibility="gone"/>
        <RadioButton
            android:clickable="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/msg_status"
            android:drawableTop="@drawable/selector_main_msg"
            style="@style/main_tabhost_style"
            android:text="@string/tab_msg"/>
    </RelativeLayout>
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/personal"
        android:drawableTop="@drawable/selector_main_personal"
        style="@style/main_tabhost_style"
        android:text="@string/tab_personal"/>
</RadioGroup>