<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/included_title1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dip" >

        <Button
            style="@style/reg_btn_style"
            android:textColor="@color/black"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:gravity="left"
            android:textSize="@dimen/text_size_12"
            android:text="@string/feed_back_label" />

        <EditText
            android:id="@+id/content"
            style="@style/normal_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feed_back_hint"
            android:minHeight="150dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dip" >

        <Button
            android:id="@+id/send_info"
            style="@style/login_btn_style"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/btn_height"
            android:text="@string/submit_relay_str" />
    </LinearLayout>

</LinearLayout>