<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0.5dp">
        <RelativeLayout
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/layout_style_main"
            android:layout_weight="1"
            android:layout_marginRight="0.5dp">
            <ImageView
                android:id="@+id/label_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_search"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:layout_toRightOf="@id/label_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey3"
                    android:text="@string/intel_search"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/intel_search_tag"
                    android:textColor="@color/grey4"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/spec_lesson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/layout_style_main"
            android:layout_weight="1"
            android:layout_marginLeft="0.5dp">
            <ImageView
                android:id="@+id/label_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_lesson"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:layout_toRightOf="@id/label_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey3"
                    android:text="@string/special_lesson"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/special_lesson_tag"
                    android:textColor="@color/grey4"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="0.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/layout_style_main"
            android:layout_weight="1"
            android:layout_marginRight="0.5dp">
            <ImageView
                android:id="@+id/label_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_news"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:layout_toRightOf="@id/label_img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey3"
                    android:text="@string/news_broadcast"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/news_broadcast_tag"
                    android:textColor="@color/grey4"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/service"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/layout_style_main"
            android:layout_weight="1"
            android:layout_marginLeft="0.5dp">
            <ImageView
                android:id="@+id/label_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_service"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:layout_toRightOf="@id/label_img4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:paddingLeft="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey3"
                    android:text="@string/user_service"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    android:text="@string/user_service_tag"
                    android:textColor="@color/grey4"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>